Better initial  Set up

--- a/src/frontend.scss
+++ b/src/frontend.scss
@@ -1,3 +1,5 @@
-.text-paragraph-frontend {
-  color: red;
-}
+//Styles just on the Frontend
+
+// .text-paragraph-frontend {
+//   color: red;
+// }
