--- a/src/frontend.scss
+++ b/src/frontend.scss
@@ -1,5 +1,3 @@
-//Styles just on the Frontend
-
-// .text-paragraph-frontend {
-//   color: red;
-// }
+.text-static {
+  color: rgb(43, 192, 226);
+}
