--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-//Styles in Editor and Frontend
+//Styles in Editor and Frontend (Defined in index.php)
 
 @import "./blocks/dynamic/dynamic.scss";
 @import "./blocks/static/static.scss";
